--- a/PortalStations/translations/English.yml
+++ b/PortalStations/translations/English.yml
@@ -4,7 +4,7 @@ text_public: 'Public'
 text_guild_only: 'Guild Only'
 text_group_only: 'Group Only'
 text_guild_and_group_only: 'Guild and Group Only'
-text_destinations: 'Destinations'
+text_stations: 'Stations'
 text_search: 'Search...'
 text_rename: 'Rename'
 text_use: 'Use'
@@ -13,3 +13,18 @@ text_privacy: 'Privacy'
 msg_not_enough_fuel: 'Not enough fuel'
 text_nocost: 'No cost'
 text_free: 'Free'
+text_distance: 'Distance'
+text_cost: 'Cost'
+text_teleport: 'Teleport'
+text_favorites: 'Favorites'
+text_settings: 'Settings'
+text_players: 'Players'
+msg_private: 'Station is private'
+msg_invalid_guild: 'Invalid guild'
+msg_invalid_group: 'Invalid group'
+msg_invalid_guild_or_group: 'Invalid guild or group'
+text_state: 'State'
+text_open_map: 'Open map'
+text_name: 'Name'
+msg_not_creator: 'Not creator'
+text_group: 'Group'
